add validate logiv
